<resources>
    <string name="app_name">Trivia</string>
    <string name="welcome_to_trivia_app">Welcome to Trivia App</string>
    <string name="exit">Exit</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="trivia_app">Trivia App</string>
    <string name="loading">Loading...</string>
    <string name="finish">Finish</string>
    <string name="correct_answers">Correct answers</string>
    <string name="your_performance">Your Performance</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
